--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Quote-Generator",
   "version": "1.0.0",
-  "description": "Random quote generator which constructs quotes by assembling different pieces of a sentence.     View demo [Quotation Generator](https://emmanuel-melon.github.io/Quote-Generator/)  ## Objectives: This app will be built in two steps   ### Step 1:   - [ ] The quotes are generated randomly one by one with each JavaScript call   - [ ] Each quote is a combination of at least 3 sentence fragments (it's up to you to create these sentence fragments: beginning, middle, and end)   - [ ] The quotes should be relatively coherent (no exclamation points in the middle of a sentence, for example)",
+  "description": "Random quote generator which constructs quotes by assembling different pieces of a sentence.",
   "main": "lib/js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
