--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "Quote-Generator",
+  "name": "quote-generator",
   "version": "1.0.0",
   "description": "Random quote generator which constructs quotes by assembling different pieces of a sentence.",
-  "main": "lib/js/main.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src -d lib"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -25,10 +26,22 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.4.0",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.2",
-    "babel-preset-flow": "^6.23.0"
+    "babel-loader": "^8.0.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "clean-webpack-plugin": "^2.0.1",
+    "css-loader": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.0"
+    "file-loader": "^3.0.1"
   }
 }
